Shader parser, index buffers and glGeterror
** Added support for Index buffer use instead of using raw positional values

** Implemented a shader source parser which removes the need for having hardcoded shaders in the main source

** Added some debugging macros which implement some nice error logging and failure assertions

--- a/BasicGLImplementation/BasicGLImplementation.vcxproj.filters
+++ b/BasicGLImplementation/BasicGLImplementation.vcxproj.filters
@@ -13,10 +13,21 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Res">
+      <UniqueIdentifier>{0c97fab3-e1c6-4e4b-bc91-3dfe89d7b33f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Res\Shaders">
+      <UniqueIdentifier>{b6713fbe-baea-4b7d-9efb-247de3fbddb2}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="BasicShader.shader">
+      <Filter>Res\Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
