--- a/BasicGLImplementation/BasicGLImplementation.vcxproj
+++ b/BasicGLImplementation/BasicGLImplementation.vcxproj
@@ -153,6 +153,9 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="BasicShader.shader" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
