Added Uniforms, VertexArrays and abstracted vertex and index bufferes
** Added some support for the use of uniforms in the shader.

** Included the use of a vertex array to that buffer and attributes are linked automatically for later use in draw

** Abstracted the vertex buffer creation from the main function and into its own class

** Abstracted the index buffer creation from the main function and into its own class

** Abstracted the commonly used GLCall macro and error logging functionality into a renderer file to be used later or included as needed

--- a/BasicGLImplementation/BasicGLImplementation.vcxproj.filters
+++ b/BasicGLImplementation/BasicGLImplementation.vcxproj.filters
@@ -21,13 +21,37 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Main.cpp">
+    <ClCompile Include="Source\IndexBuffer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Renderer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\VertexArray.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\VertexBuffer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="BasicShader.shader">
-      <Filter>Res\Shaders</Filter>
-    </None>
+    <ClInclude Include="Source\IndexBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Renderer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\VertexArray.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\VertexBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Res\Shaders\BasicShader.shader" />
   </ItemGroup>
 </Project>
