--- a/BasicGLImplementation/BasicGLImplementation.vcxproj
+++ b/BasicGLImplementation/BasicGLImplementation.vcxproj
@@ -151,10 +151,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Source\IndexBuffer.cpp" />
+    <ClCompile Include="Source\Main.cpp" />
+    <ClCompile Include="Source\Renderer.cpp" />
+    <ClCompile Include="Source\VertexArray.cpp" />
+    <ClCompile Include="Source\VertexBuffer.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="BasicShader.shader" />
+    <ClInclude Include="Source\IndexBuffer.h" />
+    <ClInclude Include="Source\Renderer.h" />
+    <ClInclude Include="Source\VertexArray.h" />
+    <ClInclude Include="Source\VertexBuffer.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Res\Shaders\BasicShader.shader" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
