Shader and Vertex Array Abstraction
** Abstracted away the functionality for the vertex array object. Added buffer layout object to deal with configuration of array object layout (currently only supports 3 types but will be added to later)

** Abstracted away the shader parsing functionality. Most of the code was already written so just moved it to a shader api which was then integrated into main.cpp

** Trimmed down the colour modification code from three individual functions (selected by the key input function) to just one which takes a ref to the colour element and uses a ternary operator to conditionally modify it (inversion of control change (SOLID Principle)).

--- a/BasicGLImplementation/BasicGLImplementation.vcxproj.filters
+++ b/BasicGLImplementation/BasicGLImplementation.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClCompile Include="Source\VertexBuffer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\Shader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\VertexBufferLayout.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\IndexBuffer.h">
@@ -48,6 +54,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Source\VertexBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\Shader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Source\VertexBufferLayout.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
